@@ -49,15 +49,6 @@
                 <configuration>
                     <source>17</source>
                     <target>17</target>
-                    <compilerArgs>
-                        <arg>--add-exports javafx.graphics/com.sun.javafx.scene=com.jfoenix</arg>
-                        <arg>--add-exports javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</arg>
-                        <arg>--add-exports javafx.controls/com.sun.javafx.scene.control=com.jfoenix</arg>
-                        <arg>--add-exports javafx.base/com.sun.javafx.binding=com.jfoenix</arg>
-                        <arg>--add-exports javafx.base/com.sun.javafx.event=com.jfoenix</arg>
-                        <arg>--add-exports javafx.graphics/com.sun.javafx.stage=com.jfoenix</arg>
-                        <arg>--add-opens=java.base/java.lang.reflect=com.jfoenix</arg>
-                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
